--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -19,7 +19,7 @@
     margin-left: 60%;
     margin-top: -30%;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 .gemueseteller {
@@ -65,11 +65,6 @@
     list-style-type: disc;
 }
 
-h1 {
-    z-index: 2;
-}
-
-
 
 .platform {
     display: flex;
@@ -90,6 +85,9 @@ h1 {
     margin: 20px;
 }
 
+h1{
+    z-index: 1;
+}
 
 button {
     width: fit-content;
@@ -143,6 +141,11 @@ button:hover {
 
     }
 
+    h1 {
+
+        font-size: 60px;
+    }
+
 }
 
 
@@ -161,6 +164,11 @@ button:hover {
     .warenkorb {
         width: 20%;
 
+    }
+
+    h1 {
+
+        font-size: 36px;
     }
    
 
