--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -34,6 +34,7 @@
     height: auto;
     display: block;
     position: relative;
+    z-index: 1;
     
 }
 .header-container {
@@ -42,8 +43,7 @@
 
     
 h1 { 
-    font-size: 6vw;
-    margin-top: 0%;
+z-index: 2;
 }
 
 
