--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -34,7 +34,6 @@
     height: auto;
     display: block;
     position: relative;
-    z-index: 1;
     
 }
 .header-container {
@@ -43,7 +42,8 @@
 
     
 h1 { 
-z-index: 2;
+    font-size: 6vw;
+    margin-top: 0%;
 }
 
 
