--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@
 @font-face {
     font-family: 'Inter';
     src: url('../Schriften/Inter-ExtraBold.ttf') format('truetype');
-    font-weight: extrabold;
+    font-weight: 800;
     font-style: normal;
 }
 
@@ -119,7 +119,7 @@ h2 {
 
     font-size: 32px;
     text-transform: uppercase;
-    font-weight: extrabold;
+    font-weight: 800;
     line-height: 1.3;
     display: block;
 }
