--- a/CSS/ueber_uns.css
+++ b/CSS/ueber_uns.css
@@ -1,4 +1,3 @@
-
 .headerbild {
     width: 100%;
     margin-top: 0;
@@ -6,68 +5,79 @@
     position: relative;
     z-index: 1;
 }
-h1{
+
+h1 {
     z-index: 1;
 }
+
 .footerbild {
     width: 100%;
     display: block;
     position: relative;
 }
+
 .trennstrich {
     margin-top: 8%;
     margin-bottom: 6%;
     width: 100%;
 }
+
 .imgeinkaufsladen {
-    width: 25%;       
+    width: 25%;
     position: relative;
     margin-top: -30%;
     left: 60%;
     z-index: 2;
 }
+
 .imgpfanne {
-    width: 21%;      
+    width: 21%;
     position: absolute;
     bottom: 27%;
     left: 60%;
     z-index: 2;
 }
+
 .imgbrokkoli {
-    width: 6%;     
+    width: 6%;
     position: absolute;
     bottom: 60%;
     right: 10%;
     z-index: 2;
 }
+
 .video-container {
-    position: relative; 
-    display: inline-block; 
+    position: relative;
+    display: inline-block;
 }
+
 .video-container video {
-    max-width: 100%; 
-    width: 100%; 
-    height: auto;  
-    display: block;
-    margin: 0 auto; 
-    align-items: center; 
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    align-items: center;
     margin-top: 50px;
-    border: 15px solid #155929; 
-    border-radius: 15px; 
+    border: 15px solid #155929;
+    border-radius: 15px;
 }
-.imgtanne, .imgbaum {
+
+.imgtanne,
+.imgbaum {
     position: absolute;
     bottom: 0;
-    height: auto;     
+    height: auto;
 }
+
 .imgtanne {
-    width: 25%;     
+    width: 25%;
     right: 84.7%;
 }
+
 .imgbaum {
-    width: 18%;    
+    width: 18%;
     left: 92%;
 }
+
 .buttons {
     width: fit-content;
     background-color: #9dc01c;
@@ -80,21 +90,13 @@ h1{
     transition: background-color 0.3s ease;
     border: none;
 }
+
 .buttons:hover {
     background-color: #789219;
 }
-@media (max-width: 767px) {
-    .buttons {
-        font-size: 18px;
-        padding: 8px;
-    }
-}
-@media (min-width: 768px) and (max-width: 1023px) {
-    .buttons {
-        font-size: 20px;
-        padding: 9px;
-    }
-}
+
+
+
 .article1 {
     display: flex;
     flex-direction: row;
@@ -103,6 +105,7 @@ h1{
     text-align: start;
     flex-wrap: wrap;
 }
+
 .article2 {
     display: flex;
     flex-direction: row;
@@ -111,6 +114,7 @@ h1{
     text-align: start;
     flex-wrap: wrap;
 }
+
 .article3 {
     display: flex;
     flex-direction: row;
@@ -119,88 +123,94 @@ h1{
     text-align: start;
     flex-wrap: wrap;
 }
-.article4 {
-    display: flex;            
-    align-items: center;    
-    position: relative;      
+
+.team {
+    display: flex;
+    flex-direction: column;
+    width: 100%
 }
-.article4 img {
-    max-width: 50%;         
-    margin-right: -1%;     
-    z-index: 2;           
+
+.rabih {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    position: relative;
+    
 }
-.article4 p {
-    flex: 1;                 
-    margin: 0;               
-    position: relative;      
-    padding: 15px;            
-    border: 15px solid #155929; 
-    border-radius: 30px;      
-    box-sizing: border-box;   
-    z-index: 1;            
+
+.imgrabih {
+    margin-right: -1%;
+    z-index: 1;
 }
-.article5 {
-    display: flex;          
-    align-items: center;    
-    flex-direction: row-reverse;  
-    position: relative;    
+
+.rabih p {
+    padding: 15px;
+    border: 15px solid #155929;
+    border-radius: 30px;
+    word-wrap: break-word;
+    min-width: 200px;
 }
-.article5 img {
-    max-width: 50%;         
-    margin-left: -1%;       
-    z-index: 2;              
+
+.anna {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    position: relative;
 }
-.article5 p {
-    flex: 1;              
-    margin: 0;               
-    position: relative;      
-    padding: 15px;        
-    border: 15px solid #155929; 
-    border-radius: 30px;     
-    box-sizing: border-box;  
-    z-index: 1;              
+
+.imganna {
+    margin-left: -1%;
+    z-index: 1;
 }
-.article6 {
-    display: flex;           
-    align-items: center;     
-    position: relative;      
+
+.anna p {
+    padding: 15px;
+    border: 15px solid #155929;
+    border-radius: 30px;
+    word-wrap: break-word;
+    min-width: 200px;
 }
-.article6 img {
-    max-width: 50%;          
-    margin-right: -1%;     
-    z-index: 2;              
+
+.nadia {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    position: relative;
 }
-.article6 p {
-    flex: 1;                 
-    margin: 0;                
-    position: relative;     
-    padding: 15px;         
-    border: 15px solid #155929; 
-    border-radius: 30px;     
-    box-sizing: border-box;   
-    z-index: 1;               
+
+.imgnadia {
+    margin-right: -1%;
+    z-index: 1;
 }
-.article7 {
-    display: flex;          
-    align-items: center;     
-    flex-direction: row-reverse;  
-    position: relative;      
+
+.nadia p {
+    padding: 15px;
+    border: 15px solid #155929;
+    border-radius: 30px;
+    word-wrap: break-word;
+    min-width: 200px;
 }
-.article7 img {
-    max-width: 50%;        
-    margin-left: -1%;     
-    z-index: 2;             
+
+.aglaja {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    position: relative;
 }
-.article7 p {
-    flex: 1;             
-    margin: 0;               
-    position: relative;     
-    padding: 15px;          
-    border: 15px solid #155929; 
-    border-radius: 30px;     
-    box-sizing: border-box;  
-    z-index: 1;              
+
+.imgaglaja {
+    margin-left: -1%;
+    z-index: 1;
 }
+
+.aglaja p {
+    padding: 15px;
+    border: 15px solid #155929;
+    border-radius: 30px;
+    word-wrap: break-word;
+    min-width: 200px;
+}
+
 .article8 {
     display: flex;
     flex-direction: row;
@@ -208,4 +218,91 @@ h1{
     align-items: start;
     text-align: start;
     flex-wrap: wrap;
+}
+
+
+@media screen and (max-width: 576px) {
+    .buttons {
+        font-size: 18px;
+        padding: 8px;
+    }
+
+    .rabih {
+        flex-direction: column;
+    }
+
+    .imgrabih {
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+
+    .anna {
+        flex-direction: column;
+    }
+    .imganna {
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+
+    .nadia {
+        flex-direction: column;
+    }
+
+    .imgnadia {
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+
+    .aglaja {
+        flex-direction: column;
+    }
+
+    .imgaglaja{
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 577px) {
+    .buttons {
+        font-size: 20px;
+        padding: 9px;
+    }
+
+    .rabih {
+        flex-direction: column;
+    }
+
+    .imgrabih {
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+
+    .anna {
+        flex-direction: column;
+    }
+    .imganna {
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+
+    .nadia {
+        flex-direction: column;
+    }
+
+    .imgnadia {
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+
+    .aglaja {
+        flex-direction: column;
+    }
+
+    .imgaglaja{
+        margin-bottom: -7%;
+        margin-left: 0%;
+    }
+
+
 }
